--- a/image3.html
+++ b/image3.html
@@ -13,8 +13,8 @@
     <h3>We have more <a href="" class="orange_link"> links </a>here ;</h3>
     <h3>Is this a ( <a href="" class="link">link</a>?).</h3>
     <h3>We have a list</h3>
-    <ul type="">
-        <li class="bold_font">Pleas,<a href="" class="red_link">Click Me!</a></li>
+    <ul>
+        <li class="bold_font">Please,<a href="" class="red_link">Click Me!</a></li>
         <li>Can you ? let’s count</li>
         <ul>
             <li class="blue_font_list bold_font">111</li>
